# source/swagger_output.json
@@ -111,6 +111,17 @@
           }
         }
       }
+    },
+    "/company": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
     }
   }
 }
